--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 <body style="background-color:powderblue;">
 
 <h1> Min første hjemmeside </h1>
-
+<p>
+  Her er min tekst <b> den her er med fed </b>
+  
+  </p>
 
 </body>
 
